[project]
name = "teide"
version = "0.1.0"
description = "Mikrotik Communication Library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "scrapli>=2025.1.30",
    "scrapli-community>=2025.1.30",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
